--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Package: exonR
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Batool",
+           family = "Almarzouq",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+           email = "batool@liverpool.ac.uk",
+           comment = c(ORCID = "0000-0002-3905-2751"))
+Description: create plots and annotations for exons and introns.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
